[Android] Add support for updated filter item payloads